--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -639,8 +639,8 @@ video {
   left: 0px;
 }
 
-.left-1 {
-  left: 0.25rem;
+.left-2 {
+  left: 0.5rem;
 }
 
 .left-9 {
@@ -671,6 +671,10 @@ video {
   top: 0.75rem;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
 .top-9 {
   top: 2.25rem;
 }
@@ -679,12 +683,8 @@ video {
   top: 100%;
 }
 
-.left-2 {
-  left: 0.5rem;
-}
-
-.top-4 {
-  top: 1rem;
+.top-2 {
+  top: 0.5rem;
 }
 
 .z-10 {
@@ -1212,6 +1212,14 @@ video {
   line-height: 1;
 }
 
+.leading-3 {
+  line-height: .75rem;
+}
+
+.leading-6 {
+  line-height: 1.5rem;
+}
+
 .tracking-\[0\.5px\] {
   letter-spacing: 0.5px;
 }
@@ -1458,7 +1466,7 @@ body {
   display: grid;
   grid-auto-rows: auto;
   grid-auto-flow: row dense;
-  grid-template-columns: repeat(auto-fill,minmax(100px,1fr));
+  grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
   gap: 0.25rem;
 }
 
@@ -1467,7 +1475,7 @@ body {
     display: grid;
     grid-auto-rows: auto;
     grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fill,minmax(150px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
     gap: 0.5rem;
   }
 }
@@ -1477,7 +1485,7 @@ body {
     display: grid;
     grid-auto-rows: auto;
     grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fill,minmax(100px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
     gap: 0.5rem;
   }
 }
@@ -1691,44 +1699,32 @@ body {
     position: relative;
   }
 
-  .lg\:bottom-\[-0\.5rem\] {
-    bottom: -0.5rem;
-  }
-
-  .lg\:left-\[-2\.5rem\] {
-    left: -2.5rem;
-  }
-
-  .lg\:left-\[159px\] {
-    left: 159px;
-  }
-
-  .lg\:bottom-\[-0\.7rem\] {
-    bottom: -0.7rem;
-  }
-
-  .lg\:left-\[150px\] {
-    left: 150px;
-  }
-
   .lg\:bottom-\[-3rem\] {
     bottom: -3rem;
-  }
-
-  .lg\:left-\[-61px\] {
-    left: -61px;
-  }
-
-  .lg\:left-\[-89px\] {
-    left: -89px;
   }
 
   .lg\:left-\[-31px\] {
     left: -31px;
   }
 
+  .lg\:left-\[-89px\] {
+    left: -89px;
+  }
+
+  .lg\:left-\[150px\] {
+    left: 150px;
+  }
+
+  .lg\:left-\[159px\] {
+    left: 159px;
+  }
+
   .lg\:-mt-6 {
     margin-top: -1.5rem;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
   }
 
   .lg\:mb-7 {
@@ -1743,10 +1739,6 @@ body {
     margin-top: 1rem;
   }
 
-  .lg\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .lg\:inline {
     display: inline;
   }
@@ -1755,20 +1747,12 @@ body {
     display: flex;
   }
 
-  .lg\:h-\[500px\] {
-    height: 500px;
-  }
-
   .lg\:h-\[420px\] {
     height: 420px;
   }
 
   .lg\:w-\[250px\] {
     width: 250px;
-  }
-
-  .lg\:w-\[700px\] {
-    width: 700px;
   }
 
   .lg\:w-\[800px\] {
@@ -1783,10 +1767,6 @@ body {
     flex-direction: row;
   }
 
-  .lg\:pr-0 {
-    padding-right: 0px;
-  }
-
   .lg\:pr-\[0\.6rem\] {
     padding-right: 0.6rem;
   }
@@ -1795,29 +1775,17 @@ body {
     padding-right: 60px;
   }
 
-  .lg\:text-\[0\.8rem\] {
-    font-size: 0.8rem;
-  }
-
   .lg\:text-\[0\.7rem\] {
     font-size: 0.7rem;
+  }
+
+  .lg\:text-\[0\.8rem\] {
+    font-size: 0.8rem;
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:h-\[600px\] {
-    height: 600px;
-  }
-
   .xl\:w-\[800px\] {
     width: 800px;
-  }
-
-  .xl\:w-\[1200px\] {
-    width: 1200px;
-  }
-
-  .xl\:w-\[1000px\] {
-    width: 1000px;
   }
 }
