--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -98,6 +98,7 @@ body {
     border-radius: 10px !important;
     box-shadow: 5px 5px 10px #ffffff, -5px -5px 10px #bebebe !important;
     padding: 0.5rem 1rem !important;
+    
 }
 
 .neumorphic-text {
@@ -108,44 +109,30 @@ body {
   outline: none;
 }
 
+
 .image-grid {
   display: grid;
-  grid-auto-rows: auto;
-  grid-auto-flow: row dense;
-  grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+  place-content:center;
+  margin: auto;
+  grid-auto-rows: 100px;
+  grid-auto-columns: 2fr;
   gap: 0.25rem;
 }
+.image-grid :nth-child(4n + 1){
+  grid-column: span 2;
+}
+.image-grid :nth-child(4n + 4){
+  grid-column: 2/span 2;
+}
 
-@media (min-width:450px) {
-  .image-grid {
-    display: grid;
-    grid-auto-rows: auto;
-    grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
-    gap: 0.5rem;
-  }
-}
-@media (min-width:768px) {
-  .image-grid {
-    display: grid;
-    grid-auto-rows: auto;
-    grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
-    gap: 0.5rem;
-  }
-}
-@media (min-width:1024px) {
-  .image-grid {
-    display: grid;
-    grid-auto-rows: auto;
-    grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fit,minmax(100px,.75fr));
-    gap: 0.75rem;
-  }
-}
 
 @media (min-width: 1024px) {
   .label-text {
     font-size: 0.6rem !important;
   }
+}
+
+.active-radio {
+  box-shadow: inset 0 0 3px rgba(127, 181, 139, 1) !important;
+  border-radius: 0.375rem; 
 }
