--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -663,10 +663,6 @@ video {
   top: 0px;
 }
 
-.top-1 {
-  top: 0.25rem;
-}
-
 .top-3 {
   top: 0.75rem;
 }
@@ -681,10 +677,6 @@ video {
 
 .top-full {
   top: 100%;
-}
-
-.top-2 {
-  top: 0.5rem;
 }
 
 .z-10 {
@@ -1212,14 +1204,6 @@ video {
   line-height: 1;
 }
 
-.leading-3 {
-  line-height: .75rem;
-}
-
-.leading-6 {
-  line-height: 1.5rem;
-}
-
 .tracking-\[0\.5px\] {
   letter-spacing: 0.5px;
 }
@@ -1464,46 +1448,30 @@ body {
 
 .image-grid {
   display: grid;
-  grid-auto-rows: auto;
-  grid-auto-flow: row dense;
-  grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+  place-content:center;
+  margin: auto;
+  grid-auto-rows: 100px;
+  grid-auto-columns: 2fr;
   gap: 0.25rem;
 }
 
-@media (min-width:450px) {
-  .image-grid {
-    display: grid;
-    grid-auto-rows: auto;
-    grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
-    gap: 0.5rem;
-  }
+.image-grid :nth-child(4n + 1){
+  grid-column: span 2;
 }
 
-@media (min-width:768px) {
-  .image-grid {
-    display: grid;
-    grid-auto-rows: auto;
-    grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
-    gap: 0.5rem;
-  }
-}
-
-@media (min-width:1024px) {
-  .image-grid {
-    display: grid;
-    grid-auto-rows: auto;
-    grid-auto-flow: row dense;
-    grid-template-columns: repeat(auto-fit,minmax(100px,.75fr));
-    gap: 0.75rem;
-  }
+.image-grid :nth-child(4n + 4){
+  grid-column: 2/span 2;
 }
 
 @media (min-width: 1024px) {
   .label-text {
     font-size: 0.6rem !important;
   }
+}
+
+.active-radio {
+  box-shadow: inset 0 0 3px rgba(127, 181, 139, 1) !important;
+  border-radius: 0.375rem;
 }
 
 .hover\:cursor-pointer:hover {
@@ -1747,8 +1715,12 @@ body {
     display: flex;
   }
 
-  .lg\:h-\[420px\] {
-    height: 420px;
+  .lg\:h-\[500px\] {
+    height: 500px;
+  }
+
+  .lg\:w-\[1000px\] {
+    width: 1000px;
   }
 
   .lg\:w-\[250px\] {
@@ -1775,6 +1747,10 @@ body {
     padding-right: 60px;
   }
 
+  .lg\:text-\[0\.6rem\] {
+    font-size: 0.6rem;
+  }
+
   .lg\:text-\[0\.7rem\] {
     font-size: 0.7rem;
   }
@@ -1785,7 +1761,11 @@ body {
 }
 
 @media (min-width: 1280px) {
-  .xl\:w-\[800px\] {
-    width: 800px;
+  .xl\:w-\[1280px\] {
+    width: 1280px;
+  }
+
+  .xl\:w-\[1400px\] {
+    width: 1400px;
   }
 }
